--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/portal": "latest",
         "@bot-whatsapp/provider": "latest",
-        "dotenv": "^16.0.3",
+        "dotenv": "16.0.3",
         "mime-types": "2.1.35",
-        "mysql2": "^2.3.3",
-        "playwright": "^1.31.1",
+        "mysql2": "2.3.3",
+        "playwright": "1.31.1",
         "wa-sticker-formatter": "4.3.2"
     },
     "author": "",
